# peggen

./: .gitignore  Cargo.toml  LICENSE  README.md
peggen/: Cargo.toml
peggen-core/: Cargo.toml
peggen-core/src/: fromstr.rs  lib.rs  ownptr.rs  parser.rs  prepend.rs  span.rs  string.rs  tuple.rs
peggen-examples/: Cargo.toml
peggen-examples/samples/: sample.json  sample.jsonl
peggen-examples/src/: calc.rs  json.rs  json_chumsky.rs  lib.rs  ty.rs
peggen-impl/: Cargo.toml
peggen-impl/src/: bump.rs  rvec.rs
peggen-macs/: Cargo.toml
peggen-macs/src/: builder.rs  fmtparser.rs  lib.rs
peggen-macs/src/builder/: ast_impl_build.rs  num_build.rs  parse_impl_build.rs  rules_impl_build.rs
peggen/src/: lib.rs
pegging-core/: Cargo.toml
pegging-core/src/: arena.rs  lib.rs  source.rs  space.rs  span.rs  token.rs
pegging-macros/: Cargo.toml
pegging-macros/src/: fmt.rs  lib.rs  names.rs  variant.rs
pegging-test/: Cargo.toml
pegging-test/src/: calculator.rs  lib.rs
pigeon/: Cargo.toml
pigeon-core/: Cargo.toml
pigeon-core/src/: boxed.rs  lib.rs  map.rs  ownptr.rs  parser.rs  prepend.rs  span.rs  string.rs  tuple.rs
pigeon-examples/: Cargo.toml
pigeon-examples/src/: calc.rs  json.rs  lib.rs
pigeon-impl/: Cargo.toml
pigeon-impl/src/: bump.rs  lib.rs  rvec.rs
pigeon-macros/: Cargo.toml
pigeon-macros/src/: builder.rs  format.rs  lib.rs
pigeon-macros/src/builder/: ast_build.rs  ast_impl_build.rs  parse_impl_build.rs
pigeon-macs/: Cargo.toml
pigeon-macs/src/: builder.rs  fmtparser.rs  format.rs  lib.rs
pigeon-macs/src/builder/: ast_impl_build.rs  num_build.rs  parse_impl_build.rs  rules_impl_build.rs
pigeon-test/: Cargo.toml  expand.rs
pigeon-test/src/: calc.rs  json.rs  lib.rs
pigeon/src/: lib.rs
pratt-gen/: Cargo.toml
pratt-gen-core/: Cargo.toml
pratt-gen-core/src/: alist.rs  arena.rs  error.rs  lib.rs  map.rs  numbers.rs  parse.rs  prelude.rs  primitive.rs  ref.rs  space.rs  span.rs  token.rs
pratt-gen-core/src/arena/: astr.rs  avec.rs  mod.rs
pratt-gen-example/: Cargo.toml
pratt-gen-example/src/: calc.rs  lib.rs
pratt-gen-macros/: Cargo.toml
pratt-gen-macros/src/: fmt.rs  format.rs  lib.rs  parse_impl.rs  variant.rs
pratt-gen-test/: Cargo.toml
pratt-gen-test/src/: calculator.rs  json.rs  lib.rs  xxyy.rs
pratt-gen/src/: lib.rs
