[package]
name = "peggen-macs"
description = "Generate recursive-descent & precedence climbing parsers. (macros)"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["parser-tools", "parser", "compiler"]
# category = "compilers"
workspace = ".."
repository = "https://github.com/Y-jiji/peggen"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.19.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.5"
syn = "2.0.70"
