[package]
name = "pigeon-core"
description = "Generate recursive-descent & precedence climbing parsers. (traits)"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["parser-tools", "parser", "compiler"]
# category = "compilers"
workspace = ".."
repository = "https://github.com/Y-jiji/pigeon"

[dependencies]
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }
bytemuck = "1.16.1"
casey = "0.4.0"
once_cell = "1.19.0"
ouroboros = {version="0.18.4", features=[]}
rand = "0.8.5"
regex = "1.10.5"
stacker = "0.1.15"

[dev-dependencies]
rand_xoshiro = "0.6.0"

[features]
trace = ["std"]
std = []
