[package]
name = "pigeon"
description = "Generate recursive-descent & precedence climbing parsers. "
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["parser-tools", "parser", "compiler"]
# category = "compilers"
workspace = ".."
repository = "https://github.com/Y-jiji/pigeon"
readme = "../README.md"

[dependencies]
pigeon-core = { version = "0.2.0", path = "../pigeon-core" }
pigeon-impl = { version = "0.1.0", path = "../pigeon-impl" }
pigeon-macs = { version = "0.2.0", path = "../pigeon-macs" }

[features]
trace = ["std"]
std = []
