[package]
name = "pratt-gen"
description = "Generate recursive-descent & precedence climbing parsers. "
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["parser-tools", "parser", "compiler"]
category = "compilers"
workspace = ".."
repository = "https://github.com/Y-jiji/pratt-gen"
readme = "../README.md"

[dependencies]
pratt-gen-core = { version = "0.1.0", path = "../pratt-gen-core" }
pratt-gen-macros = { version = "0.1.0", path = "../pratt-gen-macros" }
